kubernetes-prod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  labels:
    app: portfolio
spec:
  replicas: 5
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: rg.nl-ams.scw.cloud/genericdevelopment/portfolio:3.0.0
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 600

---
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  type: LoadBalancer
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
    - protocol: TCP
      name: https
      port: 443
      targetPort: 3000
#      nodePort: 30000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresscontroller
spec:
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  number: 3000
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: portfolio
#spec:
#  type: NodePort
#  selector:
#    app: portfolio
#  ports:
#    - protocol: TCP
#      port: 3000
#
